--- a/public/logga-in.html
+++ b/public/logga-in.html
@@ -199,7 +199,7 @@
           })
             .then((response) => response.text()) //Här konverterar vi svaret från servern till text.
             .then((data) => {
-              alert(data); // Visa svaret från servern med pop-up
+              localStorage.setItem("jwt", data);
             })
             .catch((error) => {
               //Fångar om nåt går fel
