--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
             ><i class="fa-solid fa-basket-shopping"></i>
             <div id="cart-content">
               <div class="ta-bort-contents">-->Ta bort innehåll!<--</div>
-              <div class="ta-bort-contents">-->Köp innehåll!<--</div>
+              <div class="kop-contents">-->Köp innehåll!<--</div>
             </div>
           </a>
           <a href="logga-in.html"><i class="fa-solid fa-user"></i></a>
