--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
             <div id="cart-content">
               <div class="ta-bort-contents">-->Ta bort innehåll!<--</div>
               <div class="kop-contents">-->Köp innehåll!<--</div>
+              <ul id="ul"></ul>
+              <ul id="summa"></ul>
             </div>
           </a>
           <a href="logga-in.html"><i class="fa-solid fa-user"></i></a>
