Nu kan man byta användarnamn

--- a/public/logga-in.html
+++ b/public/logga-in.html
@@ -100,7 +100,9 @@
               <input type="submit" value="Logga in" />
             </form>
 
-            <a href="" class="main-a">Glömt Lösenord?</a>
+            <a href="anvandarnamn.html" class="main-a"
+              >Vill du byta användarnamn?</a
+            >
             <h3 id="h3">Har du inget konto än?</h3>
             <a href="registrera.html" class="main-a">Registrera dig nu!</a>
           </div>
@@ -216,7 +218,7 @@
               }
             })
             .catch((error) => {
-              console.error("Något gick fel:", error);
+              alert("Något gick fel, prova att testa ett nytt användarnamn");
             });
         });
     </script>
