Sista grejerna gjorda

--- a/public/index.html
+++ b/public/index.html
@@ -290,6 +290,7 @@
           </div>
         </div>
       </section>
+
       <section>
         <div class="artiklar-header">
           <h2>Strax <br />Mclaren Racing</h2>
@@ -421,6 +422,10 @@
         <a href="">Upphovsrätt Mclaren 2023 |</a>
       </div>
     </footer>
+    <section>
+      <h1 id="kvittorubrik">Dina tidigare beställningar</h1>
+      <div id="kvittoContainer"></div>
+    </section>
   </body>
   <script src="script.js"></script>
 </html>
